--- a/download button.html
+++ b/download button.html
@@ -18,10 +18,10 @@
     </div>
     <div class="mydiv">
       <ul>
-        <li href="#"> Facebook </li>
-        <li href="#"> Twitter </li>
-        <li href="#"> LinkedIn </li>
-        <li href="#"> Instagram </li>
+        <li href="https://www.facebook.com/amansingh.socialist"> Facebook </li>
+        <li href="https://twitter.com/Aaman0008"> Twitter </li>
+        <li href="https://www.linkedin.com/in/aman-singh-484549202/"> LinkedIn </li>
+        <li href="amansinghajay222@gmail.com"> Mail me </li>
       </ul>
     </div>
   </div>
